--- a/WebMvc/Views/Shared/_Layout.cshtml
+++ b/WebMvc/Views/Shared/_Layout.cshtml
@@ -35,9 +35,9 @@
             <article class="row">
                 <section class="col-lg-7 col-md-6 col-xs-12">
                     <a class="navbar-brand" routerLink="catalog">
-                        <a asp-area="" asp-controller="EventsPage" asp-action="Index">
+                        <b asp-area="" asp-controller="EventsPage" asp-action="Index">
                             <img src="~/images/eventhub-logo-1.png" />
-                        </a>
+                        </b>
                     </a>
                 </section>
                @*@await Html.PartialAsync("_LoginPartial")*@
